Настройка тестов и CICD (#2)
Co-authored-by: GarnetAki <RomeNightingale@gmail.com>
Co-authored-by: Урлапов Фёдор Валерьевич <urlapov@skbkontur.ru>