@@ -33,19 +33,30 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-jdk8"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-reactor"
 
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.security:spring-security-core:6.3.0'
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+
+    implementation 'com.fasterxml.jackson.core:jackson-core'
     implementation "com.fasterxml.jackson.module:jackson-module-kotlin"
     implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-csv"
 
-    runtimeOnly 'org.postgresql:postgresql'
     implementation 'org.hibernate:hibernate-core:6.2.0.Final'
     implementation 'org.liquibase:liquibase-core:4.20.0'
+
+    runtimeOnly 'org.postgresql:postgresql'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
     testImplementation 'org.mockito:mockito-core:5.0.0'
     testImplementation 'org.mockito.kotlin:mockito-kotlin:4.0.0'
     testImplementation 'org.assertj:assertj-core:3.23.1'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    testImplementation 'org.testcontainers:testcontainers:1.19.8'
+    testImplementation 'org.testcontainers:junit-jupiter:1.19.8'
+    testImplementation 'org.testcontainers:postgresql:1.19.8'
 }
 
 kotlin {
@@ -143,6 +154,34 @@ ktlint {
     ]
 }
 
+tasks.register('integrationTest', Test) {
+    useJUnitPlatform {
+        includeTags 'integration'
+    }
+}
+
 tasks.named('test') {
-    useJUnitPlatform()
+    useJUnitPlatform {
+        excludeTags 'integration'
+    }
+
+    jvmArgs '-XX:+EnableDynamicAgentLoading', '-Djdk.instrument.traceUsage'
+}
+
+test {
+    testLogging {
+        events "failed"
+        exceptionFormat "full"
+        showStandardStreams = false
+    }
+
+    afterSuite { desc, result ->
+        if (!desc.parent) {
+            println "\u001B[94m\nTest result: ${result.resultType}\u001B[0m"
+            println "\u001B[94mTest summary (${result.testCount} tests):\u001B[0m"
+            println "\u001B[32m- succeeded: ${result.successfulTestCount}\u001B[0m"
+            println "\u001B[31m- failed: ${result.failedTestCount}\u001B[0m"
+            println "\u001B[37m- skipped: ${result.skippedTestCount}\u001B[0m"
+        }
+    }
 }
